remove deprecated Long constructor